# server/docs/swagger.json
@@ -215,7 +215,7 @@
                 }
             }
         },
-        "/careers/withSubjects/{careerId}/": {
+        "/careers/withSubjects/{careerId}": {
             "get": {
                 "description": "Returns a career and its subjects by id",
                 "consumes": [
@@ -272,7 +272,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/careers/withSubjects/{careerId}/": {
             "patch": {
                 "description": "Updates a career and its subjects by id",
                 "consumes": [
